# tee_tee_tzdriver

./: LICENSE  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json
linux/: CMakeLists.txt  Kconfig  Makefile  agent.h  dynamic_mem.h  ko_adapt.c  ko_adapt.h  tc_ns_client.h  tc_ns_log.h  teek_client_api.h  teek_client_constants.h  teek_client_ext.h  teek_client_id.h  teek_client_type.h  teek_ns_client.h  tui.h
linux/agent_rpmb/: Kconfig  Makefile
linux/auth/: Kconfig  Makefile  auth_base_impl.c  auth_base_impl.h  client_hash_auth.c  client_hash_auth.h
linux/core/: Kconfig  Makefile  agent.c  agent.h  cmdmonitor.c  cmdmonitor.h  ffa_abi.c  ffa_abi.h  gp_ops.c  gp_ops.h  mailbox_mempool.c  mailbox_mempool.h  mem.c  mem.h  reserved_mempool.c  reserved_mempool.h  secs_power_ctrl.h  session_manager.c  session_manager.h  shared_mem.c  shared_mem.h  smc_abi.c  smc_abi.h  smc_call.h  smc_smp.c  smc_smp.h  tc_client_driver.c  tc_client_driver.h  tee_compat_check.c  tee_compat_check.h  teek_app_load.c  teek_app_load.h  teek_client_api.c  teek_client_ext.c  tz_pm.c  tz_pm.h  tz_spi_notify.c  tz_spi_notify.h  tz_update_crl.c  tz_update_crl.h  (+2 more)
linux/include/: internal_functions.h  ko_adapt.h  tc_ns_client.h  (+5 more)
liteos/: BUILD.gn  Kconfig  Makefile  los_adapt.c
liteos/auth/: auth_base_impl.c  auth_base_impl.h  client_hash_auth.c  client_hash_auth.h
liteos/core/: agent.c  agent.h  cmdmonitor.c  cmdmonitor.h  gp_ops.c  gp_ops.h  mailbox_mempool.c  mem.c  session_manager.c  session_manager.h  smc_smp.c  smc_smp.h  tc_client_driver.c  teek_client_api.c  tz_pm.h  tz_spi_notify.c  tz_spi_notify.h  tzdebug.c  tzdebug.h
liteos/include/: los_adapt.h  tc_ns_client.h  tc_ns_log.h  teek_client_constants.h  teek_client_id.h  teek_client_type.h  teek_ns_client.h  tzdriver.h
liteos/tlogger/: log_cfg_api.h  log_pages_cfg.c  tlogger.c  tlogger.h
(+35 files in other folders)
